# ciel_parser

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config.json.example  format.sh
app/: bot.cpp
include/: bilibili.hpp  config.hpp  douyin.hpp  pixiv.hpp  quill.hpp  twitter.hpp  utils.hpp  weibo.hpp  xhs.hpp
scripts/: douyin_parser.py
test/: test.cpp
